# retrotransposon-miner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  environment.yml  pyproject.toml
docs/: proof_of_signal_runbook.md
resources/: public_datasets.yaml
scripts/: bootstrap_env.sh  download_public_data.py  ec2_jlab.sh  git_app_push.sh  install_headless_igv_deps.sh  install_ucsc_tools.sh  nf_chr22_8pairs_selected.tsv  reprocess_pair_dual_reference.sh  run_candidate_discovery_and_annotation.sh  run_nf_chr22_8pairs_noasm.sh  run_proof_of_signal.sh  smoke_test_chr.sh  use_external_workdir.sh  validate_environment.sh
src/retro_miner/: __init__.py  candidate_loci.py  cli.py  evidence_extract.py  igv_plots.py  local_assembly.py  mei_support.py
