[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrotransposon-miner"
version = "0.1.0"
description = "High-sensitivity retrotransposon insertion calling scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "retrotransposon-miner contributors" }
]
dependencies = [
  "click>=8.1",
  "pysam>=0.22",
  "pandas>=2.2",
  "pyarrow>=16",
  "numpy>=1.26",
  "biopython>=1.84",
  "pyfaidx>=0.8",
  "intervaltree>=3.1",
  "pyyaml>=6.0",
  "rich>=13.7"
]

[project.scripts]
rtm = "retro_miner.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
